--- a/Music-Player/Base.lproj/Main.storyboard
+++ b/Music-Player/Base.lproj/Main.storyboard
@@ -115,6 +115,15 @@
                                 <rect key="frame" x="92" y="605" width="221" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </slider>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jtF-H1-Xck">
+                                <rect key="frame" x="29" y="59" width="123" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Reset Favorites"/>
+                                <connections>
+                                    <action selector="pressResetFavs:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i2p-X6-Bx9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -127,9 +136,9 @@
                         <outlet property="lyricsTextView" destination="g3M-XV-zG4" id="oEG-Zw-arX"/>
                         <outlet property="musicSingerLbl" destination="Ur8-Jt-hAH" id="2ei-hr-faW"/>
                         <outlet property="musicTitleLbl" destination="jfO-kd-oIk" id="0d2-79-8Rf"/>
-                        <outlet property="nextMusicBtn" destination="yEi-N9-ZAc" id="9di-Fq-ubB"/>
                         <outlet property="playMusicBtn" destination="aqV-oE-EX4" id="KCc-hL-pBV"/>
                         <outlet property="prevMusicBtn" destination="Gm2-jo-c46" id="9Mp-tU-Wjf"/>
+                        <outlet property="resetFavesBtn" destination="jtF-H1-Xck" id="eS4-o9-dnU"/>
                         <outlet property="timeLeftLbl" destination="njA-8i-Vx4" id="z9c-4X-WOe"/>
                     </connections>
                 </viewController>
